--- a/configuration.yaml
+++ b/configuration.yaml
@@ -26,7 +26,6 @@ scene: !include scenes.yaml
 camera: !include camera.yaml
 
 
-
 telegram_bot:
   - platform: polling
     api_key: !secret telegrambotapikey01
@@ -57,3 +56,23 @@ light:
       192.168.170.29:
         name: Schlafzimmer-Bild-Lichtstreifen
         mode: rgb
+        
+        
+emulated_hue:
+  host_ip: 192.168.170.42
+  listen_port: 80
+  advertise_ip: 192.168.170.42
+  off_maps_to_on_domains:
+    - script
+    - scene
+  expose_by_default: true
+  exposed_domains:
+    - light
+  entities:
+    light.yeelight_color_0x0000000003731644:
+      name: "Arbeitszimmer Standlicht"
+    light.yeelight_strip6_0x0000000015619634:
+      name: "Schreibtisch"              
+        
+        
+        
